
syntax = "proto3";
// The greeting service definition.
service StudentService {
	// Sends a greeting
	rpc GetStudents (StudentRequest) returns (StudentReply) {}
	//rpc GetFromTxt (StudentRequest) returns (StudentReply) {}
}

// The request message containing the user's name.
message StudentRequest {
	string name = 1;
}

// The response message containing the greetings
message StudentReply {
	string info = 1;
	

}